# portfolio-health-api

./: .gitignore  LICENSE  README.md  app.py  observability.py  pyproject.toml  requirements.txt
data/: account_health_snapshot.json
docs/: ai-review-notes.md  architecture.md  operating_model.md
src/transparent_api_service/: api.py  api_contract.py  factory.py  models.py  observability.py  settings.py
src/transparent_api_service/services/: account_service.py
tests/: test_api.py  test_app.py  test_health.py
